--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "connection": "^1.4.0",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
