--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "connection": "^1.4.0",
     "express": "^4.19.2",
+    "firebase-admin": "^12.0.0",
     "mysql": "^2.18.1",
     "sequelize": "^6.37.1",
     "uuid": "^9.0.1"
