--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
     "sequelize": "^6.37.1",
     "uuid": "^9.0.1"
   }
