--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api.js"
@@ -13,10 +13,13 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "connection": "^1.4.0",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
+    "keyword-extractor": "^0.0.28",
+    "marked": "^12.0.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
