--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "connection": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "keyword-extractor": "^0.0.28",
